samples/_failures_safe/1761271158_c2d509_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d097a47e.c: In function ‘main’:
./samples/SAFE/__tmp_d097a47e.c:153:13: error: expected expression at end of input
  153 |             case
      |             ^~~~
./samples/SAFE/__tmp_d097a47e.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d097a47e.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d097a47e.c:153:13: error: expected declaration or statement at end of input
